# JaiIran

./: Cargo.toml  README.md  agent.md  deploy.sh
scripts/: tui.sh
src/: main.rs
