[package]
name = "aegis-relay"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
h2 = "0.4"
http = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TLS
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "0.26"

# uTLS-style fingerprinting via BoringSSL
boring = { version = "4" }
tokio-boring = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
